--- a/packages/cita-sdk/package.json
+++ b/packages/cita-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cryptape/cita-sdk",
-  "version": "0.22.2",
+  "version": "0.22.3-alpha.0",
   "main": "lib/index.js",
   "repository": "https://github.com/cryptape/cita-sdk-js/tree/master/packages/cita-sdk",
   "author": "Keith <keithwhisper@gmail.com>",
