--- a/packages/cita-web-debugger/package.json
+++ b/packages/cita-web-debugger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cita-web-debugger",
-  "version": "0.2.5",
+  "version": "0.2.6-alpha.0",
   "private": true,
   "dependencies": {
     "@cryptape/cita-sdk": "^0.21.2",
