--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "root",
   "private": false,
+  "version": "0.22.2",
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist",
     "build": "lerna run build",
